{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 88,
  "lineage": "03701d81-5f1a-53f5-b548-78ee71de0bd5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708150571091:internet-gateway/igw-04014105e6f78eb98",
            "id": "igw-04014105e6f78eb98",
            "owner_id": "708150571091",
            "tags": {
              "Name": "devops-igw"
            },
            "tags_all": {
              "Name": "devops-igw"
            },
            "vpc_id": "vpc-0df89e55c01e9956f"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708150571091:route-table/rtb-02e102eca53fde6f0",
            "id": "rtb-02e102eca53fde6f0",
            "owner_id": "708150571091",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04014105e6f78eb98",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-route-table"
            },
            "tags_all": {
              "Name": "devops-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df89e55c01e9956f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940a310fa76184a4",
            "route_table_id": "rtb-02e102eca53fde6f0",
            "subnet_id": "subnet-0743f34000ee20148"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_route_table",
            "aws_subnet.devops_subnet",
            "aws_vpc.devops_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0866824d84556d14d",
            "route_table_id": "rtb-02e102eca53fde6f0",
            "subnet_id": "subnet-09e3ad0e60d76ad5a"
          },
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_route_table.devops_route_table",
            "aws_subnet.devops_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708150571091:security-group/sg-05202efc5a19a5002",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05202efc5a19a5002",
            "ingress": [],
            "name": "terraform-20241221032605826400000002",
            "name_prefix": "terraform-",
            "owner_id": "708150571091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-cluster-sg"
            },
            "tags_all": {
              "Name": "devops-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df89e55c01e9956f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708150571091:security-group/sg-0c33a891d38928d1d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c33a891d38928d1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241221032605824900000001",
            "name_prefix": "terraform-",
            "owner_id": "708150571091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-node-sg"
            },
            "tags_all": {
              "Name": "devops-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df89e55c01e9956f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708150571091:subnet/subnet-0743f34000ee20148",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0743f34000ee20148",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "708150571091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-subnet-0"
            },
            "tags_all": {
              "Name": "devops-subnet-0"
            },
            "vpc_id": "vpc-0df89e55c01e9956f"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708150571091:subnet/subnet-09e3ad0e60d76ad5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e3ad0e60d76ad5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "708150571091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-subnet-1"
            },
            "tags_all": {
              "Name": "devops-subnet-1"
            },
            "vpc_id": "vpc-0df89e55c01e9956f"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:708150571091:vpc/vpc-0df89e55c01e9956f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5b983b251d3d096",
            "default_route_table_id": "rtb-0a20e7e6253d7729f",
            "default_security_group_id": "sg-0a22f3560dc2d3008",
            "dhcp_options_id": "dopt-0121dee319cf07dc3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df89e55c01e9956f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a20e7e6253d7729f",
            "owner_id": "708150571091",
            "tags": {
              "Name": "devops-vpc"
            },
            "tags_all": {
              "Name": "devops-vpc"
            }
          }
        }
      ]
    }
  ]
}